# hamming-digital-filters

./: NOTE  README.md  pyproject.toml
contrib/: nfdif.for  nfsmt.for  ortpol.for
doc/figures/: fig_1_4_gradient_nr.py  fig_5_8_lowpass_nr.py  fig_9_12_lowpass_mt.py
hamming_digital_filters/: gradient.py  lowpass.py
